--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="fa" ng-app="app">
+<html lang="en" ng-app="app">
 
     <head>
-        <title>Calendar</title>
+        <title>ADM-dateTimePicker | Pure AngularJs date & time picker</title>
         <meta charset="utf-8" />
         <link rel="icon" type="image/png" href="images/favicon.png">
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-        <meta name="description" content="">
-        <meta name="keywords" content="">
-        <meta name="language" content="fa">
+        <meta name="description" content="ADM-dateTimePicker | Pure AngularJs Gregorian and Jalali smart date & time picker">
+        <meta name="keywords" content="ADM-dateTimePicker,Pure,AngularJs,date,time,picker,gregorian,jalali,smart,destroy,adm,amirkabir,data,miners,shamsi,calendar">
+        <meta name="language" content="en">
         <meta name="robots" content="all" />
         <meta name="rights" content="Copyright © 2015 ADM | Amirkabir Data Miners - All rights reserved">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -19,8 +19,8 @@
         <link rel="stylesheet" href="stylesheets/github.min.css">
 
         <script src="js/highlight.min.js"></script>
-        <script src="js/angular.js"></script>
-<!--        <script src="js/angular.min.js"></script>-->
+<!--        <script src="js/angular.js"></script>-->
+        <script src="js/angular.min.js"></script>
         <script src="js/angular-highlightjs.min.js"></script>
         <script src="js/angular-animate.min.js"></script>
         <script src="js/angular-route.min.js"></script>
