--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <script src="js/angular-route.min.js"></script>
         <script src="js/controllers/controllers.js"></script>                
         <script src="js/controllers/homeControllers.js"></script>
+<!--        <script src="js/controllers/betaControllers.js"></script>-->
         
         <script src="js/ADM-dateTimePicker/ADM-dateTimePicker_module.min.js"></script>
 <!--        <script src="js/ADM-dateTimePicker/ADM-dateTimePicker_module.js"></script>-->
