--- a/index.html
+++ b/index.html
@@ -10,9 +10,73 @@
         <meta name="keywords" content="ADM-dateTimePicker,Pure,AngularJs,date,time,picker,gregorian,jalali,smart,destroy,adm,amirkabir,data,miners,shamsi,calendar,persian,sass,bootstrap,compass">
         <meta name="language" content="en">
         <meta name="robots" content="all" />
-        <meta name="rights" content="Copyright © 2016 ADM | Amirkabir Data Miners - All rights reserved">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="rights" content="Copyright © 2017 ADM | Amirkabir Data Miners - All rights reserved">
+        <meta name="Copyright" content="ADM | Amirkabir Data Miners">
+        <meta name="Designer" content="https://github.com/MeTe-30">
+        <meta name="Publisher" content="ADM | Amirkabir Data Miners">
+        <meta name="distribution" content="Global">
+        <meta name="Robots" content="INDEX,FOLLOW">
+        <meta name="zipcode" content="1481846515">
+        <meta name="city" content="Tehran">
+        <meta name="country" content="Iran">
+        <meta property="og:title" content="Pure AngularJs dateTimePicker" />
+        <meta property="og:site_name" content="ADM-dateTimePicker"/>
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="http://amirkabirdataminers.github.io/ADM-dateTimePicker">
+        <meta property="og:description" content="Pure AngularJs Gregorian and Jalali smart dateTimePicker" />
+        <meta property="og:image" content="http://amirkabirdataminers.github.io/ADM-dateTimePicker/images/cover.jpg" />
+        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">   
+        <link rel="author" href="https://google.com/+ADMcoNet-GPlus"> 
 
+        <script type="application/ld+json">
+            {"@graph": [{
+                "@context" : "http://schema.org",
+                "@type" : "Organization",
+                "name" : "Amirkabir Data Miners",
+                "alternateName" : "ADM | Amirkabir Data Miners",
+                "description": "Web Applications, Business Intelligent Applications, Smart Devices Applications",
+                "url" : "https://adm-co.net",
+                "email": "info@adm-co.net",
+                "logo": {
+                    "@type": "ImageObject",
+                    "url": "https://adm-co.net/content/images/ADM_Logo.png",
+                    "caption": "Amirkair Data Miners Logo",
+                    "width": "2480px",
+                    "height": "1459px"
+                },
+                "telephone": "+98-21-44002963",
+                "address": "Floor 2, No 380, Aghil St, Ayatollah Kashani St, Tehran, 1481846515 Iran",
+                "contactPoint" : [{
+                    "@type" : "ContactPoint",
+                    "telephone" : "+98-21-44002963",
+                    "contactType" : "customer service",
+                    "contactOption" : "TollFree",
+                    "areaServed" : "IR",
+                    "availableLanguage" : "Persian"
+                }],
+                "sameAs" : [
+                    "https://google.com/+ADMcoNet-GPlus",
+                    "https://www.linkedin.com/company/adm-amirkabir-data-miners-?trk=biz-companies-cym",
+                    "https://instagram.com/AmirkabirDataMiners/",
+                    "https://www.facebook.com/AmirkabirDataMiners",
+                    "http://www.pinterest.com/AmirkabirDM/",
+                    "https://twitter.com/AmirkabirDM",
+                    "https://www.youtube.com/channel/UCQxP0vZA05Pl9GlyXXQt14A/about"
+                ]
+            },
+            {
+                "@context": "http://schema.org",
+                "@type": "WebSite",
+                "url": "http://amirkabirdataminers.github.io/ADM-dateTimePicker",
+                "name" : "ADM-dateTimePicker",
+                "alternateName" : "ADM-dateTimePicker | Pure AngularJs dateTimePicker",
+                "description": "Pure AngularJs Gregorian and Jalali smart dateTimePicker",
+                "keywords": "ADM-dateTimePicker,Pure,AngularJs,date,time,picker,gregorian,jalali,smart,destroy,adm,amirkabir,data,miners,shamsi,calendar,persian,sass,bootstrap,compass",
+                "about": "ADM-dateTimePicker | Pure AngularJs dateTimePicker"
+            }]}
+        </script>
+        
         <link rel="stylesheet" href="stylesheets/bootstrap.min.css" />
         <link rel="stylesheet" href="https://npmcdn.com/adm-dtp/dist/ADM-dateTimePicker.min.css" />
         <link rel="stylesheet" href="stylesheets/app.css" />
